# FastApiQueues

./:  .dockerignore  .env.docker.template  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  locustfile.py  pyproject.toml
fastapi-application/: .env  .env.template  main.py  run_main.py  tasks.py
fastapi-application/alembic/: env.py
fastapi-application/alembic/versions/: 2024_12_17_0132-62f8862b5c77_inti.py  2024_12_28_0133-567f634f61a1_create_users_table.py  2024_12_29_2045-7b8614aefb34_added_first_and_last_names_for_user.py  2024_12_31_0038-6b632fab19e7_created_table_for_queues.py  2025_01_01_1912-429bc6b5c8a1_created_table_for_queues.py  2025_01_09_0400-34d20a85ece6_tags_table_and_queuetags_table.py  2025_01_11_0507-01445204797c_constraints_added.py  2025_02_04_0010-5fdbf0fc8e47_fix_types_add_checks.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: __init__.py  auth.py  fastapi_users_routers.py  schemas.py  views.py
fastapi-application/api/dependencies/: __init__.py  services.py  users.py
fastapi-application/api/routers/: __init__.py  queues_entries_router.py  queues_router.py
fastapi-application/core/: __init__.py  celery_app.py  config.py  db_helper.py  rabbitmq.py  registry.py  types.py
fastapi-application/core/auth/: __init__.py  backend.py  get_db.py  strategy.py  transport.py  user_manager.py
fastapi-application/core/base/: __init__.py  model.py  repository.py  services.py  types.py
fastapi-application/core/factories/: __init__.py  condition_builder.py  repository.py  service.py
fastapi-application/core/gunicorn/: __init__.py  app_options.py  application.py
fastapi-application/core/models/: __init__.py  base.py  curr_history.py  db_helper.py  mongodb.py  queue.py  tags.py  types.py  user.py
fastapi-application/core/mongodb/: __init__.py  connection.py  schemas.py
fastapi-application/core/schemas/: logging.py  user.py
fastapi-application/core/templates/: index.html
fastapi-application/domains/queues/: __init__.py  models.py  repositories.py  schemas.py  services.py
fastapi-application/domains/tags/: __init__.py  models.py  repositories.py  services.py
fastapi-application/domains/users/: __init__.py  models.py  repositories.py  schemas.py  services.py
fastapi-application/factories/: __init__.py  condition_builder.py  get_service.py  repository.py  service.py
fastapi-application/interfaces/: abstract_repository.py
fastapi-application/models/: __init__.py  mongodb.py  types.py
fastapi-application/models/mixins/: int_id_pk.py
fastapi-application/models/postgresql/: queue.py  tags.py  types.py  user.py
fastapi-application/repositories/: __init__.py  base.py  queue.py  queue_entry.py  queue_tags.py  tags.py  types.py  user.py
fastapi-application/schemas/: queue_entries.py  queue_entries_schemas.py  queue_schemas.py  queues.py  user_schemas.py
fastapi-application/services/: __init__.py  base.py  queue.py  queue_entry.py  queue_tag.py  services.py  tags.py  types.py  user.py
fastapi-application/tasks/: celery_app.py  tasks.py
fastapi-application/tests/: conftest.py  docker-compose.yml
fastapi-application/tests/integration/: test_queue_endpoints.py  test_queue_entries_endpoints.py  test_tag_endpoints.py
fastapi-application/tests/unit/: test_base_repository.py  test_base_service.py  test_get_log_params.py  test_log_action.py
fastapi-application/utils/: __init__.py  api_v1.py  condition_builder.py  dict_utils.py  exception_handlers.py  exceptions.py  handle_exceptions.py  logger.py  utils_for_api.py
fastapi_application/: main.py
fastapi_application/alembic/: env.py
fastapi_application/alembic/versions/: 2025_01_09_0400-34d20a85ece6_tags_table_and_queuetags_table.py  2025_02_10_2220-ba8ae0b8fdcb_add_timezone_to_datetime.py
fastapi_application/api/dependencies/: users.py
fastapi_application/api/v1/: __init__.py
fastapi_application/core/: __init__.py  config.py  exceptions.py  registry.py  types.py
fastapi_application/core/auth/: backend.py  strategy.py
fastapi_application/core/base/: __init__.py  repository.py  services.py
fastapi_application/core/factories/: condition_builder.py  repository.py  service.py
fastapi_application/core/gunicorn/: app_options.py  application.py
fastapi_application/core/mongodb/: __init__.py  schemas.py
fastapi_application/domains/queues/: __init__.py  repositories.py  schemas.py  services.py
fastapi_application/domains/tags/: repositories.py
fastapi_application/domains/users/: repositories.py  schemas.py
fastapi_application/tasks/: __init__.py  celery_app.py  tasks.py
fastapi_application/utils/: condition_builder.py  handle_exceptions.py  logger.py
tests/: conftest.py
tests/integration/: test_queue_entries_endpoints.py  test_tag_endpoints.py
tests/unit/: test_get_log_params.py  test_log_action.py
(+72 files in other folders)
