[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standart"], version = "^0.32.1"}
pydantic = {extras = ["email"], version = "^2.10.3"}
pydantic-settings = "^2.6.1"
fastapi = "^0.115.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
jinja2 = "^3.1.4"
aiofiles = "^24.1.0"
python-multipart = "0.0.17"
orjson = "^3.10.12"
fastapi-users = {extras = ["redis", "sqlalchemy"], version = "^14.0.0"}
motor = "^3.6.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
import-linter = "^2.1"
pydeps = "^3.0.0"
pre-commit = "^4.1.0"
mypy = "^1.14.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.load_testing.dependencies]
locust = "^2.32.6"

[tool.mypy]
python_version = "3.10"
strict = true