[tool.poetry]
package-mode = false

########################################################################################

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standart"], version = "^0.32.1"}
pydantic = {extras = ["email"], version = "^2.10.3"}
pydantic-settings = "^2.6.1"
fastapi = "^0.115.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
jinja2 = "^3.1.4"
aiofiles = "^24.1.0"
python-multipart = "0.0.17"
orjson = "^3.10.12"
fastapi-users = {extras = ["redis", "sqlalchemy"], version = "^14.0.0"}
motor = "^3.6.0"
gunicorn = "^23.0.0"

########################################################################################

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
import-linter = "^2.1"
pydeps = "^3.0.0"
mypy = "^1.14.1"

########################################################################################
aiosqlite = "^0.20.0"

[tool.poetry.group.lint.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.9.1"
black = "^24.10.0"

########################################################################################

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:pydantic"]


########################################################################################

[tool.poetry.group.load_testing.dependencies]
locust = "^2.32.6"

########################################################################################

[tool.mypy]
python_version = "3.13"
strict = true
exclude = "fastapi-application/api/v1/routers/.*"

########################################################################################

[tool.ruff.lint.isort]
known-first-party = ["api", "domains","utils","core"]

########################################################################################

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".*_factory.py",
]
########################################################################################

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.

select = [
    "F", # Pyflakes
    "E", # Error
    "E4", # Error
    "E9", # Error
    "I", # isort
    "BLE", # flake8-blind-except
    "YTT", # flake8-2020
    "ASYNC", # flake8-async
]
ignore = ["BLE001"]

########################################################################################

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
########################################################################################

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"